--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,12 @@
 
     <string name="SHARED_PREFERENCES">com.example.lovidovi.utils.sharedpref</string>
     <string name="CLIENTS_PHONE">com.example.lovidovi.utils.sharedpref.phone</string>
+    <string name="CLIENTS_EMAIL">com.example.lovidovi.utils.sharedpref.email</string>
     <string name="CLIENTS_TOKEN">com.example.lovidovi.utils.sharedpref.accessToken</string>
     <string name="CLIENTS_STATUS">com.example.lovidovi.utils.sharedpref.status</string>
+
+    <string name="banner">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="interstitial">ca-app-pub-3940256099942544/1033173712</string>
+    //banner ca-app-pub-2675524966199983/1365984570
+    //inter ca-app-pub-2675524966199983/2714709359
 </resources>
